--- a/Introduccion/Introduccion.csproj
+++ b/Introduccion/Introduccion.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Introduccion.Preguntas</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,7 +47,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Perimetro.cs" />
+    <Compile Include="PositivoNuloNegativo.cs" />
+    <Compile Include="Preguntas.cs" />
+    <Compile Include="Promedio.cs" />
+    <Compile Include="PromedioAlumno.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubTotal.cs" />
+    <Compile Include="MayorMenor.cs" />
+    <Compile Include="SumaProducto.cs" />
+    <Compile Include="TresMayores.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
