--- a/Introduccion/Introduccion.csproj
+++ b/Introduccion/Introduccion.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Introduccion.Preguntas</StartupObject>
+    <StartupObject>Introduccion.Cifras</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cifras.cs" />
     <Compile Include="Perimetro.cs" />
     <Compile Include="PositivoNuloNegativo.cs" />
     <Compile Include="Preguntas.cs" />
