--- a/Introduccion/Introduccion.csproj
+++ b/Introduccion/Introduccion.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Introduccion.InformeAlumno</StartupObject>
+    <StartupObject>Introduccion.AlturaPromedio</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlturaPromedio.cs" />
     <Compile Include="Antiguedad.cs" />
     <Compile Include="Cifras.cs" />
     <Compile Include="Cuadrante.cs" />
