--- a/Introduccion/Introduccion.csproj
+++ b/Introduccion/Introduccion.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Introduccion.Multiplo8</StartupObject>
+    <StartupObject>Introduccion.Listas</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -52,6 +52,7 @@
     <Compile Include="Cuadrante.cs" />
     <Compile Include="FechaNavidad.cs" />
     <Compile Include="InformeAlumno.cs" />
+    <Compile Include="Listas.cs" />
     <Compile Include="Multiplo8.cs" />
     <Compile Include="Perimetro.cs" />
     <Compile Include="PositivoNuloNegativo.cs" />
