--- a/Introduccion/Introduccion.csproj
+++ b/Introduccion/Introduccion.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Introduccion.Listas</StartupObject>
+    <StartupObject>Introduccion.EnterosParesImpares</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -50,6 +50,7 @@
     <Compile Include="Antiguedad.cs" />
     <Compile Include="Cifras.cs" />
     <Compile Include="Cuadrante.cs" />
+    <Compile Include="EnterosParesImpares.cs" />
     <Compile Include="FechaNavidad.cs" />
     <Compile Include="InformeAlumno.cs" />
     <Compile Include="Listas.cs" />
