--- a/Introduccion/Introduccion.csproj
+++ b/Introduccion/Introduccion.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Introduccion.Triangulo</StartupObject>
+    <StartupObject>Introduccion.Clases</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -49,6 +49,7 @@
     <Compile Include="AlturaPromedio.cs" />
     <Compile Include="Antiguedad.cs" />
     <Compile Include="Cifras.cs" />
+    <Compile Include="Clases.cs" />
     <Compile Include="Cuadrante.cs" />
     <Compile Include="EnterosParesImpares.cs" />
     <Compile Include="FechaNavidad.cs" />
