--- a/Introduccion/Introduccion.csproj
+++ b/Introduccion/Introduccion.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Introduccion.CrearMatriz</StartupObject>
+    <StartupObject>Introduccion.IntercalarMatriz</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -57,6 +57,7 @@
     <Compile Include="EnterosParesImpares.cs" />
     <Compile Include="FechaNavidad.cs" />
     <Compile Include="InformeAlumno.cs" />
+    <Compile Include="IntercalarMatriz.cs" />
     <Compile Include="Listas.cs" />
     <Compile Include="MenorRepetido.cs" />
     <Compile Include="Multiplo8.cs" />
