--- a/EstructuraDinamica/EstructuraDinamica.csproj
+++ b/EstructuraDinamica/EstructuraDinamica.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LIFO.cs" />
     <Compile Include="Nodo.cs" />
     <Compile Include="FIFO.cs" />
     <Compile Include="Program.cs" />
